<resources>
    <string name="app_name">HackGT16</string>
    <string name="title_activity_welcome_screen">WelcomeScreen</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="name">name</string>
    <string name="height">height</string>
    <string name="gitmefit">git me fit</string>
    <string name="feet">(feet)</string>
    <string name="inches">(in)</string>
    <string name ="age">age</string>
    <string name="weight">weight</string>
    <string name="itsfittime">it\'s fit time</string>
</resources>
