<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.alexsteen.hackgt16.LoginScreen"
    android:background="@color/leafy_green">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/username"
        android:textColor="#FFFFFF"
        android:id="@+id/usernameprompt"
        android:layout_marginTop="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="false"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameblank"
        android:layout_below="@+id/usernameprompt"
        android:layout_alignParentStart="false"
        android:width="400dp"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:singleLine="false"
        android:background="@color/abc_search_url_text_normal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:id="@+id/passwordprompt"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/usernameblank"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordblank"
        android:width="400dp"
        android:layout_below="@+id/passwordprompt"
        android:layout_alignParentStart="true"
        android:textColor="#FFFFFF"
        android:background="@color/abc_search_url_text_normal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gitmefit"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:backgroundTint="@color/bright_foreground_material_dark"
        android:width="200dp"
        android:textColor="@color/leafy_green"
        android:textSize="30dp"
        android:onClick="goToWelcomeScreen"/>

</RelativeLayout>
